[package]
name = "rust-lambda-cdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.9.0"
aws-types = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
lambda_runtime = "0.6.1"
lambda_http = "0.3.0"
serde_json = "1.0.79"
tokio = "1.17.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = [ "json", "rustls-tls" ], default-features = false }
serde_derive = "*"
serde = "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"